# bitgard

./: Cargo.toml  README.md  build.rs
data/resources/: resources.gresource.xml  style.css
data/resources/ui/: shortcuts.ui  window.ui
src/: com.tassilobalbo.bitgard.gschema.xml  main.rs  utils.rs
src/collection_object/: imp.rs  mod.rs
src/task_object/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
