[package]
name = "bitgard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.1", package = "gtk4" }
# todo app dependencies
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.adw]
package = "libadwaita"
version = "0.2.0"

[build-dependencies]
glib-build-tools = "0.16.3"
